# Manifold

./: .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.cadvisor.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
api/: Dockerfile  h4ckath0n.db  openapi.json  pyproject.toml
api/app/: main.py  middleware.py
api/app/agents/: chat.py  policies.py  runtime.py  schemas.py  topology.py
api/app/agents/tools/: __init__.py  security_snapshot.py  telemetry.py
api/app/agents/workflows/: __init__.py  chat_workflow.py  topology_workflow.py
api/app/core/: config.py  database.py
api/app/models/: __init__.py  telemetry.py  topology.py
api/app/routers/: __init__.py  aegis.py  auth_ext.py  dashboard.py  ingest.py
api/app/schemas/: cadvisor.py
api/app/services/: detection.py  discovery.py  ingestion.py  report_generation.py
api/scripts/: init_db.py
api/tests/: test_agents.py  test_chat.py  test_detection.py  test_ingest.py  test_tools.py  test_topology.py
docs/: CURRENT_STATE_AND_PRODUCTION_PLAN.md  release-process.md
scripts/: smoke_test.sh  smoke_test_live_cadvisor.sh
scripts/ci/: compute_version.py  package_frontend.sh
web/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/e2e/: security.spec.ts
web/playwright-report/: index.html
web/src/: App.tsx  index.css
web/src/api/: aegis.test.ts  aegis.ts  client.ts  manifold.test.ts  manifold.ts  openapi.ts  types.ts
web/src/auth/: AuthContext.tsx  api.ts  deviceKey.ts
web/src/components/: AIChatPanel.tsx  Layout.tsx  (+7 more)
(+26 files in other folders)
