[project]
name = "manifold-api"
version = "0.1.0"
description = "API for manifold"
requires-python = ">=3.11"
dependencies = [
    "h4ckath0n>=0.1.9",
    "cryptography>=44.0",
    "greenlet>=3.3.2",
    "python-multipart>=0.0.22",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.31.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "pyyaml>=6.0",
]

[project.scripts]
h4ckath0n = "h4ckath0n.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "aiosqlite>=0.21",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]
asyncio_mode = "auto"
